style(payments): fix badge wrapping

--- a/assets/scss/paymentlist.scss
+++ b/assets/scss/paymentlist.scss
@@ -3,6 +3,7 @@
 }
 .date-label {
   margin-bottom: 5px;
+  font-weight: 500;
 }
 .list .card + .card {
   margin-top: 12px;
